# md2doc

./: .gitignore  App.tsx  MANIFEST.in  README.md  app.py  index.html  metadata.json  package.json  pyproject.toml  types.ts
components/: MarkdownInput.tsx  Sidebar.tsx  WordPreview.tsx  icons.tsx
markdown_to_word/: __init__.py
markdown_to_word/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
markdown_to_word/frontend/src/: App.tsx  types.ts
markdown_to_word/frontend/src/components/: MarkdownInput.tsx  Sidebar.tsx  WordPreview.tsx  icons.tsx
